# massar_location_versionfinal

./: README.md  package-lock.json  package.json
prisma/: schema.prisma
prisma/migrations/20260505000000_auth_users/: migration.sql
prisma/migrations/20260507000000_archive_fields/: migration.sql
src/: main.tsx  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
src/app/: App.tsx  router.tsx
src/components/: Header.tsx  Sidebar.tsx  StatusBadge.tsx
src/components/ui/: SearchableSelect.tsx  alert-dialog.tsx  alert.tsx  badge.tsx  breadcrumb.tsx  dropdown-menu.tsx  separator.tsx
src/hooks/: useAuth.tsx  useConfirmAction.tsx
src/lib/: constants.ts
src/pages/ai/: AIForecastPage.tsx
src/pages/archive/: ArchivePage.tsx
src/pages/archive/components/: ArchiveTabs.tsx  (+6 more)
src/pages/auth/: AuthPage.tsx
src/pages/cars/: CarDetails.tsx  CarsPage.tsx
src/pages/clients/: ClientDetails.tsx  ClientsPage.tsx
src/pages/contracts/: ContractPDF.tsx  ContractPreview.tsx
src/pages/dashboard/: DashboardPage.tsx
src/pages/payments/: DepositAnalyticsDialog.tsx  PaymentDetailsPage.tsx  PaymentForm.tsx  PaymentsPage.tsx
src/pages/rapport/: RapportPage.tsx
src/pages/reservations/: CalendarTimeGrid.tsx  ReservationForm.tsx  ReservationsPage.tsx
src/pages/settings/: SettingsPage.tsx
src/services/: aiForecastService.ts  archiveService.ts  auth.service.ts  invoke.ts
src/types/: aiForecast.ts  archive.ts  auth.ts  car.ts  client.ts  contract.ts  payment.ts  reservation.ts
src/utils/: client.ts  date.ts  pdf.ts  rapportPdf.ts  settings.ts
(+10 files in other folders)
