[package]
name = "car-rental-app"
version = "0.1.0"
description = "Desktop car rental management application"
authors = ["Massar Location"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
pbkdf2 = "0.12"
rand = "0.8"
rusqlite = { version = "0.32", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
